[project]
name = "Hello_service"
version = "1.0.0"
description = "simple hello world service"
authors = [
    {name = "xdvora23",email = "xdvora23@mendelu.cz"},
]
dependencies = [
    "fastapi>=0.103.2",
    "uvicorn[standard]>=0.23.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm.scripts]
start = "uvicorn main:app --reloaded"
test = "pytest"
[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.4.2",
]
